ACLOCAL_AMFLAGS = -I m4
AM_MAKEFLAGS = --no-print-directory -s

SUBDIRS = src examples doc

EXTRA_DIST = CHANGES m4/debug.m4

TESTS = examples/adder/runtest \
	examples/bddcalc/runtest \
	examples/bddsatcountbug/runtest \
	examples/bddsupportbug/runtest \
	examples/bddtest/runtest \
	examples/cmilner/runtest \
	examples/fdd/runtest \
	examples/milner/runtest \
	examples/money/runtest \
	examples/queen/runtest
	
	
	